fix: extra margin in search result

--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -192,7 +192,6 @@
         .article-preview {
             font-size: 1.4rem;
             color: var(--card-text-color-tertiary);
-            margin-top: 10px;
             line-height: 1.5;
         }
     }
